Fix a overlap css class

--- a/app/assets/stylesheets/components/_new_challenge_info.scss
+++ b/app/assets/stylesheets/components/_new_challenge_info.scss
@@ -1,4 +1,4 @@
-.active {
+.active_step {
   background-color: $light_grey;
 }
 
@@ -23,7 +23,7 @@
   }
 
   li:hover {
-    @extend .active;
+    @extend .active_step;
   }
 
   .step_description {
